--- a/APP/Android/PointsLeague/app/src/main/res/drawable/point_normal.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/drawable/point_normal.xml
@@ -4,5 +4,5 @@
     <size
         android:width="5dp"
         android:height="5dp" />
-    <stroke android:color="#FFFFFF" android:width="1dp"/>
+    <stroke android:color="#e2e1e1" android:width="1dp"/>
 </shape>
