完善反馈，添加反馈成功，修改多行输入框

--- a/APP/Android/PointsLeague/app/src/main/res/values/dimens.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="feedback_border_radius">5dp</dimen>
+    <dimen name="feedback_border_width">1dp</dimen>
+    <dimen name="feedback_input_padding">5dp</dimen>
 </resources>
