--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_feedback.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_feedback.xml
@@ -58,19 +58,18 @@
             android:text="反馈内容"
             />
 
-        <android.support.design.widget.TextInputLayout
+
+        <EditText
+            android:id="@+id/editText"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="2">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="请输入反馈信息" />
-        </android.support.design.widget.TextInputLayout>
-
+            android:layout_height="wrap_content"
+            android:padding="@dimen/feedback_input_padding"
+            android:ems="10"
+            android:minLines="5"
+            android:gravity="top"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/feedback_bg_multi_input"
+            android:inputType="textMultiLine" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -87,11 +86,13 @@
             android:inputType="textEmailAddress" />
 
         <Button
+            android:id="@+id/textView_feedback_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="提交反馈"
+            android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"/>
+            android:onClick="buttonClick"
+            android:text="提交反馈" />
 
     </LinearLayout>
 
