--- a/APP/IOS/PointExchange/PointExchange/Exchange.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Exchange.storyboard
@@ -583,6 +583,6 @@
         <image name="编辑" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ojH-ed-eE2"/>
+        <segue reference="Ibp-GC-DTh"/>
     </inferredMetricsTieBreakers>
 </document>
