--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_pay_code.xml
@@ -1,30 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".PayCodeActivity">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_pay_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme">
 
 
-    <ImageView
-        android:id="@+id/imageview_barcode"
-        android:layout_width="282dp"
-        android:layout_height="120dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
-        android:contentDescription="@string/BarCodeDescription"
-        app:srcCompat="@android:color/background_light" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="积分码"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/colorWhite"
+            android:textSize="18sp" />
 
-    <ImageView
-        android:id="@+id/imageview_qr"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="65dp"
-        android:contentDescription="@string/QRDescription"
-        app:srcCompat="@android:color/background_light" />
-</RelativeLayout>
+
+    </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/imageview_barcode"
+            android:layout_width="282dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="10dp"
+            android:contentDescription="@string/BarCodeDescription"
+            app:srcCompat="@android:color/background_light" />
+
+        <ImageView
+            android:id="@+id/imageview_qr"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:contentDescription="@string/QRDescription"
+            app:srcCompat="@android:color/background_light"
+            android:layout_marginTop="15dp"/>
+
+        <Button
+            android:id="@+id/button_gt_choose_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_bg"
+            android:onClick="onClick"
+            android:text="选择积分"
+            android:textColor="@color/colorWhite" />
+
+    </LinearLayout>
+
+
+</LinearLayout>
