--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_payment_finish.xml
@@ -9,6 +9,26 @@
     tools:context=".PaymentFinishActivity">
 
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_paying_finish"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="抵扣成功"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/colorWhite"
+            android:textSize="18sp" />
+
+
+    </android.support.v7.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="154dp"
