--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_account.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:paddingTop="20dp">
 
@@ -19,11 +21,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_account_box_black_96dp" />
+                app:srcCompat="@drawable/ic_account_box_black_96dp" />
         </FrameLayout>
 
         <LinearLayout
-            android:id="@+id/account_info_area_account"
+            android:id="@+id/linearlayout_account_info_account"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -34,10 +36,32 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ListView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
+        android:padding="30dp">
 
-    </ListView>
+        <ListView
+            android:id="@+id/listView_menu_account"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            >
+        </ListView>
+
+        <Button
+            android:id="@+id/button_logout_account"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:textColor="@color/colorWhite"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="退出登录"/>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
