--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_find.xml
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|center_vertical"
                 android:layout_marginEnd="20dp"
-                android:src="@drawable/ic_clear_black_24dp"
+                app:srcCompat="@drawable/ic_clear_black_24dp"
                 android:visibility="gone" />
         </FrameLayout>
 
